--- a/.gitignore
+++ b/.gitignore
@@ -130,6 +130,7 @@ venv.bak/
 
 # uv
 .uv/
+uv.lock
 
 # Spyder project settings
 .spyderproject
@@ -182,4 +183,4 @@ Desktop.ini
 config.json
 *.log
 temp/
-tmp/ 
+tmp/
