--- a/.github/workflows/python_template.yml
+++ b/.github/workflows/python_template.yml
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  build:
+  python-ci:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -17,9 +17,9 @@ jobs:
         uses: astral-sh/setup-uv@v6
       - name: Install dependencies
         run: uv sync
-      - name: linting
+      - name: Linting
         run: uv run flake8 src/ tests/
-      - name: type checking
+      - name: Type checking
         run: uv run mypy src/
       - name: Run tests
-        run: uv run pytest tests/
+        run: uv run pytest tests/ --cov=src --cov-report=html --cov-report=term
